# catnip

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  MANIFEST.in  README.md  makefile  mcp.toml  pyproject.toml  setup.py
catnip_core/: Cargo.toml
catnip_core/src/: arith.rs  constants.rs  exception.rs  lib.rs  nanbox.rs  paths.rs  policy.rs  scalar.rs  symbols.rs  types.rs
catnip_core/src/cfg/: analysis.rs  basic_block.rs  builder_ir.rs  edge.rs  graph.rs  liveness.rs  mod.rs  optimization.rs  region.rs  ssa.rs  ssa_builder.rs  ssa_cse.rs  ssa_destruction.rs  ssa_dse.rs  ssa_gvn.rs  ssa_iv.rs  ssa_licm.rs  tests.rs
catnip_core/src/delta/: collection.rs  mod.rs  op.rs  ops_stateless.rs
catnip_core/src/freeze/: mod.rs  struct_type.rs  value.rs  worker.rs
catnip_core/src/ir/: mod.rs  opcode.rs  pure.rs  tests.rs
catnip_core/src/jit/: builtin_dispatch.rs  codegen.rs  detector.rs  executor.rs  function_info.rs  inliner.rs  memo_cache.rs  mod.rs  registry.rs  trace.rs  trace_cache.rs
catnip_core/src/loader/: mod.rs  resolve.rs
catnip_core/src/parser/: mod.rs  pure_transforms.rs  utils.rs
catnip_core/src/pipeline/: diagnostic.rs  mod.rs  semantic.rs
catnip_core/src/semantic/: mod.rs  opcode.rs
catnip_core/src/vm/: compiler_core.rs  memory.rs  mod.rs  mro.rs  opcode.rs  peephole.rs
catnip_libs/http/rust/: Cargo.toml
catnip_libs/io/rust/: Cargo.toml
catnip_libs/sys/rust/: Cargo.toml
catnip_lsp/: Cargo.toml
catnip_lsp/src/: diagnostics.rs  encoding.rs  main.rs  server.rs  symbols.rs
catnip_mcp/: Cargo.toml  __init__.py  __main__.py  mcp.toml  server.py
catnip_mcp/src/: capture.rs  debug_session.rs  main.rs  resources.rs  server.rs
catnip_mcp/src/tools/: check.rs  debug.rs  eval.rs  format.rs  mod.rs  parse.rs
catnip_repl/: Cargo.toml
catnip_repl/src/: app.rs  commands.rs  completer.rs  completion_workflow_tests.rs  config.rs  config_editor.rs  config_tui.rs  context.rs  executor.rs  highlighter.rs  hints.rs  history.rs  input.rs  integration_tests.rs  lib.rs  signal.rs  theme.rs
catnip_repl/src/widgets/: completion.rs  mod.rs
catnip_rs/: Cargo.toml  README.md  build.rs  gen_opcodes.py  gen_theme.py  pyproject.toml  visual.toml
catnip_rs/src/: constants.rs  context.rs  dispatch.rs  freeze.rs  lib.rs  pipeline.rs  runtime.rs  test_support.rs  types.rs  weird_log.rs
catnip_rs/src/cache/: backend.rs  disk.rs  memoization.rs  mod.rs
catnip_rs/src/cfg/: analysis.rs  basic_block.rs  builder_ir.rs  edge.rs  graph.rs  mod.rs  optimization.rs  reconstruction.rs  region.rs  ssa.rs  ssa_builder.rs  ssa_cse.rs  ssa_destruction.rs  ssa_dse.rs  ssa_gvn.rs  ssa_iv.rs  ssa_licm.rs  tests.rs
catnip_rs/src/cli/: mod.rs
catnip_rs/src/config/: mod.rs
catnip_rs/src/core/: builtins.rs  function.rs  meta.rs  method.rs  mod.rs  nodes.rs  op.rs  pattern.rs  scope.rs
catnip_rs/src/debug/: callback.rs  console.rs  mod.rs  session.rs  types.rs
catnip_rs/src/ir/: json.rs  mod.rs  opcode.rs  pure.rs  pyclass.rs  tests.rs  to_python.rs
catnip_rs/src/jit/: builtin_dispatch.rs  codegen.rs  detector.rs  executor.rs  inliner.rs  memo_cache.rs  mod.rs  registry.rs  trace.rs  trace_cache.rs
catnip_rs/src/loader/: cache.rs  mod.rs  namespace.rs  native_plugin.rs
catnip_rs/src/nd/: declaration.rs  future.rs  mod.rs  recur.rs  scheduler.rs  vm_decl.rs  worker_pool.rs
catnip_rs/src/parser/: core.rs  mod.rs  pure_transforms.rs  transforms.rs  tree_node.rs  utils.rs
catnip_rs/src/pipeline/: executor.rs  mod.rs
catnip_rs/src/policy/: mod.rs
catnip_rs/src/pragma/: mod.rs
catnip_rs/src/repl/: README.md  SYNTAX_HIGHLIGHTING.md  highlight_demo.cat  mod.rs
catnip_rs/src/semantic/: analyzer.rs  base.rs  block_flattening.rs  blunt_code.rs  common_subexpression_elimination.rs  constant_folding.rs  constant_propagation.rs  copy_propagation.rs  dead_code_elimination.rs  dead_store_elimination.rs  function_inlining.rs  mod.rs  opcode.rs  optimizer.rs  strength_reduction.rs  tail_recursion_to_loop.rs  utils.rs
catnip_rs/src/standalone/: convert.rs  executor.rs  mod.rs  semantic.rs
catnip_rs/src/tools/: debugger_shims.rs  mod.rs  shims.rs
catnip_rs/src/transformer/: mod.rs
catnip_rs/src/vm/: compiler.rs  compiler_core.rs  compiler_input.rs  core.rs  enums.rs  frame.rs  host.rs  iter.rs  memory.rs  mod.rs  mro.rs  opcode.rs  pattern.rs  peephole.rs  py_interop.rs  structs.rs  traits.rs  unified_compiler.rs  unions.rs  value.rs
catnip_rs/tests/: README.md  TESTING_STRATEGY.md  regression_chained_calls.rs  regression_newlines.rs  regression_vmfunction.rs  run_basic.rs  run_broadcast.rs  run_cli.rs  run_control_flow.rs  run_functions.rs  run_imports.rs  run_nd_process.rs  run_worker.rs  run_worker_pool.rs  standalone_basic.rs  standalone_broadcast.rs  standalone_cli.rs  standalone_control_flow.rs  standalone_functions.rs
catnip_rs/tests/common/: mod.rs
catnip_tools/: Cargo.toml  _genutil.py  gen_builtins.py  gen_stdlib_registry.py
catnip_tools/src/: config.rs  debugger.rs  errors.rs  ffi.rs  formatter.rs  indentation.rs  lib.rs  lint_cfg.rs  linter.rs  multiline.rs  sourcemap.rs  suggest.rs  token.rs  tokenizer.rs
catnip_tools/src/lint_cfg/: mod.rs  tests.rs
catnip_tools/src/linter/: improvements.rs  mod.rs  semantic.rs  tests.rs
catnip_tools/src/pretty/: align.rs  combinators.rs  convert.rs  convert_decl.rs  convert_expr.rs  convert_stmt.rs  doc.rs  layout.rs  mod.rs
catnip_vm/: Cargo.toml
catnip_vm/src/: error.rs  host.rs  lib.rs  loader.rs  pipeline.rs  plugin.rs  stdlib.rs  test_support.rs  value.rs
catnip_vm/src/collections/: bytes.rs  dict.rs  list.rs  mod.rs  set.rs  tuple.rs
catnip_vm/src/compiler/: code_object.rs  collections.rs  control_flow.rs  core.rs  error.rs  exceptions.rs  expr.rs  functions.rs  helpers.rs  input.rs  mod.rs  pattern.rs  structs.rs  tests.rs
catnip_vm/src/host/: mod.rs  tests.rs
catnip_vm/src/ops/: arith.rs  collection.rs  errors.rs  mod.rs  string.rs
catnip_vm/src/pipeline/: mod.rs  tests.rs
catnip_vm/src/vm/: broadcast.rs  closure.rs  core.rs  (+6 more)
catnip_vm/tests/: cfg_proptest.rs  cfg_roundtrip.rs
(+666 files in other folders)
