[workspace]
resolver = "2"
members = ["catnip_rs", "catnip_tools", "catnip_repl", "catnip_grammar"]

[workspace.package]
version = "0.0.5"
edition = "2021"
authors = ["Catnip Contributors"]
license = "MIT"
repository = "https://github.com/ari/catnip"

[workspace.dependencies]
# Shared dependencies entre tous les membres du workspace
pyo3 = { version = "0.28", default-features = false, features = ["macros"] }
tree-sitter = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Profile commun pour tous les binaires
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
