[workspace]
resolver = "2"
members = [
    "catnip_core",
    "catnip_vm",
    "catnip_rs",
    "catnip_tools",
    "catnip_repl",
    "catnip_grammar",
    "catnip_libs/io/rust",
    "catnip_libs/sys/rust",
]

[workspace.package]
version = "0.0.7"
edition = "2021"
authors = ["Catnip Contributors"]
license = "MIT"
repository = "https://github.com/ari/catnip"

[workspace.dependencies]
# Shared dependencies entre tous les membres du workspace
pyo3 = { version = "0.28", default-features = false, features = ["macros"] }
tree-sitter = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Profile commun pour tous les binaires
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# Dev rapide : CATNIP_DEV=1 pip install -e .
[profile.fastdev]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 16
incremental = true
strip = false
debug = true
