[workspace]
resolver = "2"
members = [
    "catnip_core",
    "catnip_vm",
    "catnip_rs",
    "catnip_tools",
    "catnip_repl",
    "catnip_grammar",
    "catnip_lsp",
    # @generated-stdlib-workspace-start
    "catnip_libs/http/rust",
    "catnip_libs/io/rust",
    "catnip_libs/sys/rust",
    # @generated-stdlib-workspace-end
    "catnip_mcp",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Catnip Contributors"]
license = "MIT"
repository = "https://github.com/ari/catnip"

[workspace.dependencies]
# Shared dependencies entre tous les membres du workspace
pyo3 = { version = "0.29", default-features = false, features = ["macros"] }
tree-sitter = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Profile commun pour tous les binaires
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# Dev rapide : CATNIP_DEV=1 pip install -e .
[profile.fastdev]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 256
incremental = true
strip = false
debug = 1

# Dépendances externes (jamais éditées) : opt-level élevé une seule fois (rebuilds
# incrémentaux ne les recompilent pas), code généré rapide pour l'exécution des tests.
[profile.fastdev.package."*"]
opt-level = 2
codegen-units = 16
