[project]
name = "catnip-lang"
dynamic = ["version"]
description = "Catnip language"
authors = [{name = "Aristofor Kolomb", email = "aristofor@gmail.com"}]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
    "click>=8.3.1,<9",
    "xxhash>=3.6.0,<4",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.24.0",
]
test = [
    "pytest>=9.0,<10",
    "pytest-xdist>=3.8,<4",
    "pytest-rerunfailures>=15.0,<16",
]
dev = [
    "catnip-lang[test]",
    "cibuildwheel>=3.2,<4",
    "build>=1.3,<2",
    "ruff>=0.14,<1",
    "numpy>=2.4,<3",
    "pandas>=2.3,<4",
    "markdown>=3.10,<4",
    "pygments>=2.19,<3",
    "httpx[http2]>=0.28,<1",
    "setuptools-rust>=1.11,<2"
]

# Exemples d'intégration par catégorie
examples-data = [
    "numpy>=2.4,<3",
    "pandas>=2.3,<4",
    "duckdb>=1.4,<2",
    "polars>=1.37,<2",
    "pyarrow>=22,<23"
]
examples-files = [
    "pyyaml>=6.0,<7",
    "lxml>=6.0,<7",
    "jmespath>=1.0,<2"
]
examples-web = [
    "httpx[http2]>=0.28,<1",
    "selectolax>=0.4.6,<0.5",
    "redis>=7.1,<8"
]
examples-viz = [
    "matplotlib<4",
    "seaborn<1",
    "plotly<6"
]
examples-nlp = [
    "textblob<1",
    "spacy<4"
]
examples-images = [
    "pillow<12"
]
examples-ml = [
    "scikit-learn<2",
    "torch<3"
]
examples-geometry = [
    "shapely<3",
    "scipy<2"
]
examples-geospatial = [
    "geopy<3",
    "pyproj<4",
    "shapely<3"
]
examples-symbolic = [
    "sympy<2",
    "networkx<4"
]

# Toutes les dépendances exemples
examples-all = [
    "catnip-lang[examples-data]",
    "catnip-lang[examples-files]",
    "catnip-lang[examples-web]",
    "catnip-lang[examples-viz]",
    "catnip-lang[examples-nlp]",
    "catnip-lang[examples-images]",
    "catnip-lang[examples-ml]",
    "catnip-lang[examples-geometry]",
    "catnip-lang[examples-geospatial]",
    "catnip-lang[examples-symbolic]",
    "tqdm<5"
]

[build-system]
requires = ["setuptools", "wheel", "setuptools-rust>=1.10.0"]
build-backend = "setuptools.build_meta"

# Liste explicite des packages
[tool.setuptools]
packages = [
    "catnip",
    "catnip.cli",
    "catnip.cli.commands",
    "catnip.cachesys",
    "catnip.repl",
    "catnip.tools",
    "catnip.semantic",
    "catnip.vm",
    "catnip_mcp",
]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "catnip._version.__version__"}

# Données de paquet
[tool.setuptools.package-data]
catnip = ["*.pyx", "*.pxd", "bin/*"]

[tool.setuptools.exclude-package-data]
"catnip" = ["*.c", "*.cpp", "*.so", "*.pyd"]

#--- DEV-ONLY-START ---
# sdist: inclure les C générés
#[tool.setuptools.sdist]
#include = [
#  "catnip/*.c",
#  "catnip/*.h",
#  "catnip/*.pxd",
#  "catnip/*.pyx",
#  "README.md",
#  "LICENSE",
#]
#--- DEV-ONLY-END ---

[project.scripts]
catnip = "catnip.cli:main"
catnip-standalone = "catnip.bin_wrappers:catnip_standalone"
catnip-repl = "catnip.bin_wrappers:catnip_repl"

[project.entry-points."catnip.commands"]
cache = "catnip.cli.commands.cache:cmd_cache"
commands = "catnip.cli.commands.commands:cmd_commands"
config = "catnip.cli.commands.config:cmd_config"
debug = "catnip.cli.commands.debug:cmd_debug"
format = "catnip.cli.commands.format:cmd_format"
lint = "catnip.cli.commands.lint:cmd_lint"
plugins = "catnip.cli.commands.plugins:cmd_plugins"
repl = "catnip.cli.commands.repl:cmd_repl"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-n", "auto",
    "--ignore=tests/apps",           # Optional integration tests, run separately per module
    "--ignore=tests/jit_functions"    # Standalone JIT scripts, not pytest tests
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["tools", "benchmarks", "docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py (public API re-exports)
"__init__.py" = ["F401"]
# Allow unused imports in nodes.py (Rust implementation re-exports)
"catnip/nodes.py" = ["F401", "E402"]
# Allow unused imports in registry.py (may be re-exported)
"catnip/registry.py" = ["F401"]
# Allow unused imports and variables in tests (pytest fixtures, test setup, etc.)
# Also allow True/False comparisons for explicit test assertions
"tests/**" = ["F401", "F841", "E712"]
# Allow unused imports in MCP servers
"catnip_mcp/**" = ["F401"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py312"]

[tool.cibuildwheel]
build = "cp313-*"
skip = "*-musllinux_* *-manylinux_aarch64"
build-verbosity = 0
before-all = [
    # Install Rust with minimal profile (saves ~200MB download)
    "curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain stable --profile minimal",
    "rm -rf /project/target /project/build",  # Clean all build artifacts to avoid host glibc symbols
]
# Note: Binaries are NOT included in manylinux wheels due to static Python limitation
# They are available via: make install-bins, GitHub releases, or local wheel builds

# Optimisations de compilation
# -march=x86-64-v2: baseline moderne (SSE3, SSSE3, SSE4.1, SSE4.2, POPCNT)
# Compatible avec CPUs post-2009 (Core i3/i5/i7, AMD Bulldozer+)
[tool.cibuildwheel.linux.environment]
PATH = "$HOME/.cargo/bin:$PATH"
CFLAGS = "-O3 -pipe -march=x86-64-v2"
LDFLAGS = "-Wl,-O1"
MAX_JOBS = "$(nproc)"

[tool.cibuildwheel.macos.environment]
PATH = "$HOME/.cargo/bin:$PATH"
CFLAGS = "-O3 -pipe -march=core2"
LDFLAGS = "-Wl,-O1"
MAX_JOBS = "0"
