[project]
name = "catnip-lang"
dynamic = ["version"]
description = "Catnip language"
authors = [{name = "Aristofor Kolomb", email = "aristofor@gmail.com"}]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
    "click>=8.3,<9",
    "xxhash>=3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0,<10",
    "pytest-xdist>=3.8,<4",
    "pytest-rerunfailures>=16.0,<17",
]
dev = [
    "catnip-lang[test]",
    "cibuildwheel>=4.0,<5",
    "build>=1.4,<2",
    "ruff>=0.15,<1",
    "numpy>=2.4,<3",
    "pandas>=3.0,<4",
    "markdown>=3.10,<4",
    "pygments>=2.19,<3",
    "httpx[http2]>=0.28,<1",
    "setuptools-rust>=1.12,<2"
]

# Exemples du langage (docs/examples/) : seule dépendance externe = cryptography
examples-all = [
    "cryptography>=43,<49"
]

# Codex -- intégrations Python par catégorie (1 extra = 1 dossier codex/)
codex-data-analytics = [
    "numpy>=2.4,<3",
    "pandas>=3.0,<4",
    "duckdb>=1.4,<2",
    "duckdb-engine>=0.17",
    "sqlalchemy>=2.0,<3",
    "polars>=1.38,<2",
    "pyarrow>=23,<24"
]
codex-files-formats = [
    "pyyaml>=6.0,<7",
    "lxml>=6.0,<7",
    "jmespath>=1.1,<2",
    "orjson>=3.11,<4",
    "pyarrow>=23,<24"
]
codex-geometry = [
    "numpy>=2.4,<3",
    "pillow>=12.1,<13",
    "shapely>=2.1,<3",
    "scipy>=1.17,<2"
]
codex-geospatial = [
    "geopy>=2.4,<3",
    "pyproj>=3.7,<4",
    "shapely>=2.1,<3",
    "rasterio>=1.5,<2",
    "geopandas>=1.1,<2",
    "osmnx>=2.1,<3",
    "folium>=0.20,<1",
    "branca>=0.8,<1",
    "pystac-client>=0.9,<1"
]
codex-images-media = [
    "numpy>=2.4,<3",
    "scipy>=1.17,<2",
    "opencv-python>=4.13,<5",
    "pillow>=12.1,<13",
    "pyvips[binary]>=3.1,<4"
]
codex-machine-learning = [
    "numpy>=2.4,<3",
    "scikit-learn>=1.8,<2",
    "torch>=2.10,<3",
    "torchvision>=0.25,<1"
]
codex-nlp-text = [
    # 3.8.14 ne publie ni wheel CPython 3.14 ni distribution source.
    "spacy>=3.8,<3.8.14"
]
codex-optimization = [
    "numpy>=2.4,<3",
    "scipy>=1.17,<2",
    "matplotlib>=3.10,<4"
]
codex-persistence = [
    "redis>=7.3,<8",
    "orjson>=3.11,<4"
]
codex-structural-biology = [
    "gemmi>=0.7,<1",
    "numpy>=2.4,<3",
    "scipy>=1.17,<2",
    "matplotlib>=3.10,<4",
    "networkx>=3.6,<4"
]
codex-symbolic-graphs = [
    "sympy>=1.14,<2",
    "networkx>=3.6,<4"
]
codex-utils = [
    "tqdm>=4.67,<5"
]
codex-visualization = [
    "numpy>=2.4,<3",
    "matplotlib>=3.10,<4",
    "seaborn>=0.13,<1",
    "plotly>=6.6,<7",
    "hvplot>=0.12,<1",
    "holoviews>=1.23,<2"
]
codex-web = [
    "httpx[http2]>=0.28,<1",
    "selectolax>=0.4.7,<0.5"
]

# Toutes les intégrations codex
codex-all = [
    "catnip-lang[codex-data-analytics]",
    "catnip-lang[codex-files-formats]",
    "catnip-lang[codex-geometry]",
    "catnip-lang[codex-geospatial]",
    "catnip-lang[codex-images-media]",
    "catnip-lang[codex-machine-learning]",
    "catnip-lang[codex-nlp-text]",
    "catnip-lang[codex-optimization]",
    "catnip-lang[codex-persistence]",
    "catnip-lang[codex-structural-biology]",
    "catnip-lang[codex-symbolic-graphs]",
    "catnip-lang[codex-utils]",
    "catnip-lang[codex-visualization]",
    "catnip-lang[codex-web]"
]

[dependency-groups]
dev = [
    "setuptools>=75",
    "setuptools-rust>=1.12,<2",
    "wheel",
    "pytest>=9.0,<10",
    "pytest-xdist>=3.8,<4",
    "pytest-rerunfailures>=16.0,<17",
    "ruff>=0.15,<1",
    "pygments>=2.19,<3",
    "markdown>=3.10,<4",
    "pyyaml>=6.0,<7",
    "selectolax>=0.4.7,<0.5",
]

[tool.uv]
managed = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[build-system]
requires = ["setuptools", "wheel", "setuptools-rust>=1.12"]
build-backend = "setuptools.build_meta"

# Liste explicite des packages
[tool.setuptools]
packages = [
    "catnip",
    "catnip.cli",
    "catnip.cli.commands",
    "catnip.cachesys",
    "catnip.debug",
    "catnip.repl",
    "catnip.tools",
    "catnip.semantic",
    "catnip.vm",
]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "catnip._version.__version__"}

# Données de paquet
[tool.setuptools.package-data]
# libcatnip_*.so: native (PyO3-less) stdlib plugins (e.g. http), discovered at
# runtime next to the extension. The cpython-tagged extensions are added by
# setuptools-rust as ext_modules, so they stay excluded below.
catnip = ["*.pyx", "*.pxd", "bin/*", "libcatnip_*.so"]

[tool.setuptools.exclude-package-data]
"catnip" = ["*.c", "*.cpp", "*.cpython-*.so", "*.pyd"]

#--- DEV-ONLY-START ---
# sdist: inclure les C générés
#[tool.setuptools.sdist]
#include = [
#  "catnip/*.c",
#  "catnip/*.h",
#  "catnip/*.pxd",
#  "catnip/*.pyx",
#  "README.md",
#  "LICENSE",
#]
#--- DEV-ONLY-END ---

[project.scripts]
catnip-repl = "catnip.bin_wrappers:catnip_repl"

[project.entry-points."catnip.commands"]
cache = "catnip.cli.commands.cache:cmd_cache"
commands = "catnip.cli.commands.commands:cmd_commands"
completion = "catnip.cli.commands.completion:cmd_completion"
config = "catnip.cli.commands.config:cmd_config"
debug = "catnip.cli.commands.debug:cmd_debug"
extensions = "catnip.cli.commands.extensions:cmd_extensions"
format = "catnip.cli.commands.format:cmd_format"
lint = "catnip.cli.commands.lint:cmd_lint"
module = "catnip.cli.commands.module:cmd_module"
plugins = "catnip.cli.commands.plugins:cmd_plugins"
lsp = "catnip.cli.commands.lsp:cmd_lsp"
new-lib = "catnip.cli.commands.new_lib:cmd_new_lib"
repl = "catnip.cli.commands.repl:cmd_repl"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-n", "auto",
    "--ignore=tests/apps",           # Optional integration tests, run separately per module
    "--ignore=tests/jit_functions"    # Standalone JIT scripts, not pytest tests
]
filterwarnings = [
    "ignore:This process.*use of fork:DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["tools", "benchmarks", "docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py (public API re-exports)
"__init__.py" = ["F401", "E402"]
# Allow unused imports in nodes.py (Rust implementation re-exports)
"catnip/nodes.py" = ["F401", "E402"]
# Allow unused imports in registry.py (may be re-exported)
"catnip/registry.py" = ["F401"]
# Allow unused imports and variables in tests (pytest fixtures, test setup, etc.)
# Also allow True/False comparisons for explicit test assertions
"tests/**" = ["F401", "F841", "E712", "E402"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py313"]

[tool.cibuildwheel]
build = "cp313-* cp314-*"
skip = "*-musllinux_* *-manylinux_aarch64 *-manylinux_i686"
build-verbosity = 0
before-all = [
    # Keep in sync with rust-toolchain.toml. Installing with `--default-toolchain none`
    # and relying on rust-toolchain.toml being picked up fails in the manylinux container.
    "curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.94.0 --profile minimal",
    "rm -rf /project/target /project/build /project/.cargo/config.toml",  # Clean build artifacts + local cargo config (mold/sccache)
]
# Note: Binaries are NOT included in manylinux wheels due to static Python limitation
# They are available via: make install-bins, GitHub releases, or local wheel builds

# Optimisations de compilation
# -march=x86-64-v2: baseline moderne (SSE3, SSSE3, SSE4.1, SSE4.2, POPCNT)
# Compatible avec CPUs post-2009 (Core i3/i5/i7, AMD Bulldozer+)
[tool.cibuildwheel.linux]
# manylinux2014 (CentOS 7) en EOL depuis 2024-06 -- repos yum cassés.
# manylinux_2_28 (AlmaLinux 8) supporté jusqu'en 2029, dnf opérationnel.
manylinux-x86_64-image = "manylinux_2_28"
before-build = "dnf install -y gmp-devel && rpm -q gmp-devel && ls -la /usr/include/gmp.h"

[tool.cibuildwheel.linux.environment]
PATH = "$HOME/.cargo/bin:$PATH"
CFLAGS = "-O3 -pipe -march=x86-64-v2"
LDFLAGS = "-Wl,-O1"
MAX_JOBS = "$(nproc)"

[tool.cibuildwheel.macos]
before-build = "brew install gmp"

# CPATH/LIBRARY_PATH sont lus directement par clang/ld via l'env POSIX
# (insensibles à ce que cc-rs/setuptools-rust font avec CFLAGS/LDFLAGS).
# PKG_CONFIG_PATH permet à gmp-mpfr-sys de localiser gmp via pkg-config.
[tool.cibuildwheel.macos.environment]
PATH = "$HOME/.cargo/bin:$PATH"
CFLAGS = "-O3 -pipe -I/opt/homebrew/opt/gmp/include"
LDFLAGS = "-L/opt/homebrew/opt/gmp/lib -Wl,-O1"
CPATH = "/opt/homebrew/opt/gmp/include"
LIBRARY_PATH = "/opt/homebrew/opt/gmp/lib"
PKG_CONFIG_PATH = "/opt/homebrew/opt/gmp/lib/pkgconfig"
ARCHFLAGS = "-arch arm64"
MAX_JOBS = "2"
