[package]
name = "catnip_core"
version.workspace = true
edition.workspace = true
description = "Pure Rust core types and opcodes for Catnip (no PyO3)"

[lib]
name = "catnip_core"
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter = { workspace = true }
catnip_grammar = { path = "../catnip_grammar" }
dirs = "6.0"
bincode = { version = "2.0", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
indexmap = { version = "2.13", features = ["serde"] }

# Cranelift JIT compilation
cranelift-codegen = { version = "0.130", features = ["incremental-cache"] }
cranelift-frontend = "0.130"
cranelift-jit = "0.130"
cranelift-module = "0.130"
cranelift-native = "0.130"
target-lexicon = "0.13"
