[package]
name = "catnip_mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "catnip-mcp"
path = "src/main.rs"

[dependencies]
catnip_vm = { path = "../catnip_vm" }
catnip_core = { path = "../catnip_core" }
catnip_tools = { path = "../catnip_tools" }
catnip_grammar = { path = "../catnip_grammar" }
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt", "io-std", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2"
schemars = "0.8"
toml = "0.8"
anyhow = "1"
