[package]
name = "catnip_rs"
version.workspace = true
edition.workspace = true
description = "High-performance VM for Catnip with NaN boxing"

[lib]
name = "_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "catnip-standalone"
path = "src/bin/standalone.rs"
required-features = ["embedded"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
embedded = ["pyo3/auto-initialize"]

[dependencies]
pyo3 = { workspace = true }
tree-sitter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
catnip_tools = { path = "../catnip_tools" }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
indexmap = "2.13"
bincode = "1.3"

# Cranelift JIT compilation
cranelift-codegen = "0.128"
cranelift-frontend = "0.128"
cranelift-jit = "0.128"
cranelift-module = "0.128"
cranelift-native = "0.128"
target-lexicon = "0.12"

[build-dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Profiles définis dans workspace root
