[package]
name = "catnip_rs"
version.workspace = true
edition.workspace = true
description = "High-performance VM for Catnip with NaN boxing"

[lib]
name = "_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "catnip-standalone"
path = "src/bin/standalone.rs"
required-features = ["embedded"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
embedded = ["pyo3/auto-initialize"]

[dependencies]
pyo3 = { workspace = true, features = ["num-bigint"] }
tree-sitter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
catnip_tools = { path = "../catnip_tools" }
clap = { version = "4.5", features = ["derive"] }
toml = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
dirs = "6.0"
indexmap = "2.13"
bincode = { version = "2.0", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# Cranelift JIT compilation
cranelift-codegen = { version = "0.128", features = ["incremental-cache"] }
cranelift-frontend = "0.128"
cranelift-jit = "0.128"
cranelift-module = "0.128"
cranelift-native = "0.128"
target-lexicon = "0.13"

[build-dependencies]
toml = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Profiles définis dans workspace root
