[package]
name = "catnip_rs"
version.workspace = true
edition.workspace = true
description = "High-performance VM for Catnip with NaN boxing"

[lib]
name = "_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "catnip"
path = "src/bin/run.rs"
required-features = ["embedded"]

[features]
default = ["extension-module", "ast-executor"]
extension-module = ["pyo3/extension-module"]
embedded = ["pyo3/auto-initialize"]
ast-executor = []

[dependencies]
pyo3 = { workspace = true }
tree-sitter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
catnip_core = { path = "../catnip_core" }
catnip_vm = { path = "../catnip_vm" }
catnip_tools = { path = "../catnip_tools" }
catnip_grammar = { path = "../catnip_grammar" }
clap = { version = "4.5", features = ["derive"] }
toml = "1.0"
toml_edit = "0.25"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
dirs = "6.0"
indexmap = { version = "2.13", features = ["serde"] }
bincode = { version = "2.0", features = ["serde"] }
rug = { version = "1.27", default-features = false, features = ["integer", "std"] }
rayon = "1.10"

[target.'cfg(target_os = "macos")'.dependencies]
gmp-mpfr-sys = { version = "1", default-features = false, features = ["use-system-libs"] }

# Cranelift JIT compilation
cranelift-codegen = { version = "0.130", features = ["incremental-cache"] }
cranelift-frontend = "0.130"
cranelift-jit = "0.130"
cranelift-module = "0.130"
cranelift-native = "0.130"
target-lexicon = "0.13"

[build-dependencies]
toml = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Profiles définis dans workspace root
