[package]
name = "catnip_tools"
version.workspace = true
edition.workspace = true
description = "Catnip formatter and linter as a standalone dynamic library"

[lib]
crate-type = ["rlib"]

[dependencies]
catnip_grammar = { path = "../catnip_grammar" }
tree-sitter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
