[package]
name = "catnip-io"
version.workspace = true
edition.workspace = true
description = "Catnip I/O stdlib (native plugin ABI + PyO3 dual backend)"

[lib]
name = "catnip_io"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
embedded = ["pyo3/auto-initialize"]

[dependencies]
catnip_vm = { path = "../../../catnip_vm" }
pyo3 = { version = "0.28", default-features = false, features = ["macros"], optional = true }
