[package]
name = "catnip-sys"
version.workspace = true
edition.workspace = true
description = "Catnip sys stdlib plugin (native ABI v2 + optional PyO3)"

[lib]
name = "catnip_sys"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
embedded = ["pyo3/auto-initialize"]

[dependencies]
catnip_vm = { path = "../../../catnip_vm" }
indexmap = "2"
pyo3 = { version = "0.28", default-features = false, features = ["macros"], optional = true }
